--- a/vignettes/coast.Rmd
+++ b/vignettes/coast.Rmd
@@ -85,7 +85,7 @@ results@Pvals
 
 ### Ultra-rare variants
 
-Effect size estimation for ultra-rare variants is challenging due to the scarcity of carriers on which to base the estimate. Following works such as [SAIGE-GENE+](https://pmc.ncbi.nlm.nih.gov/articles/PMC9534766/), we recommend collapsing variants with a minor allele count (MAC) $\leq 10$ into an aggregate variant, separately within each annotation category. The `CollapseGeno` utility is provided for this purpose. The `min_mac` specifies the threshold for retention as an individual variant (e.g. `min_mac = 11` will collapse variants with a MAC $\leq 10$). The output is a list containing the annotation vector `anno` and genotype matrix `geno` after collapsing. In addition, a mapping `vars` is provided showing which variants were collapsed to create each aggregate variant. Note that: 
+Effect size estimation for ultra-rare variants is challenging due to the scarcity of carriers on which to base the estimate. Following works such as [SAIGE-GENE+](https://doi.org/10.1038/s41588-022-01178-w), we recommend collapsing variants with a minor allele count (MAC) $\leq 10$ into an aggregate variant, separately within each annotation category. The `CollapseGeno` utility is provided for this purpose. The `min_mac` specifies the threshold for retention as an individual variant (e.g. `min_mac = 11` will collapse variants with a MAC $\leq 10$). The output is a list containing the annotation vector `anno` and genotype matrix `geno` after collapsing. In addition, a mapping `vars` is provided showing which variants were collapsed to create each aggregate variant. Note that: 
 
 * `CollapseGeno` will change the order of the variants in the genotype matrix.
 
